--- a/ers/student/templates/home.html
+++ b/ers/student/templates/home.html
@@ -3,10 +3,188 @@
 {% block content %}
 <br></br>
 <br></br>
-<div class="container-lg rounded ">
+<div class="container-lg rounded">
     <div class="row mx-2">
         <h3 class="text-center mb-4">Elective Registration System DA-IICT</h3>
         <p>The Elective Registration System is designed to facilitate the selection and allotment of elective courses for students at DA-IICT. The system aims to streamline the process by allowing students to submit their course preferences and ensuring fair and efficient allotment based on predefined criteria.</p>
     </div>
 </div>
+<div class="accordion px-md-4" id="accordionExample" >
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Slot 1
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            <table class="table table-light table-hover">
+                <thead>
+                  <tr>
+                    <!-- <th scope="col">#</th> -->
+                    <th scope="col">Preferences</th>
+                    <th scope="col">Select The  Course</th>
+                    <!-- <th scope="col">Handle</th> -->
+                  </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                  <tr>
+                    <th scope="row">Preference 1</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 2</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 3</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+              
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Slot 2
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            <table class="table table-light table-hover">
+                <thead>
+                  <tr>
+                    <!-- <th scope="col">#</th> -->
+                    <th scope="col">Preferences</th>
+                    <th scope="col">Select The  Course</th>
+                    <!-- <th scope="col">Handle</th> -->
+                  </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                  <tr>
+                    <th scope="row">Preference 1</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 2</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 3</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+             
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+         Slot 3
+        </button>
+      </h2>
+      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            <table class="table table-light table-hover">
+                <thead>
+                  <tr>
+                    <!-- <th scope="col">#</th> -->
+                    <th scope="col">Preferences</th>
+                    <th scope="col">Select The  Course</th>
+                    <!-- <th scope="col">Handle</th> -->
+                  </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                  <tr>
+                    <th scope="row">Preference 1</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 2</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 3</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+            
+        </div>
+      </div>
+    </div> 
+  </div>
+  
+
+
+<!-- <script src="script.js"></script> -->
+
 {% endblock %}
