--- a/ers/student/templates/navbar.html
+++ b/ers/student/templates/navbar.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Elective Registration DA-IICT</title>
-        <link rel="icon" type="image/x-icon" href="#">
+        <link rel="icon" type="image/x-icon" href="..\static\images\daiict-logo-10.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body class="bg-light">
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg fixed-top bg-light border border-bottom-1">
             <div class="container-fluid px-md-4">
               <div class="navbar-brand d-flex align-items-center">
-                <img src="#" class="p-0" style="max-height: 30px;"/>
+                <img src="..\static\images\daiict-logo-10.png" class="p-0" style="max-height: 30px;"/>
                 <span class="d-none d-md-block fw-semibold mx-3">Elective Registration System</span>
                 <span class="d-block d-md-none fw-semibold mx-3">ERS</span>
               </div>
@@ -36,7 +36,7 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item mb-1" href="#">Electives Offered</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item mb-1" href="#">Process</a></li>
+                      <li><a class="dropdown-item mb-1" href="process.html">Process</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item mb-1" target="_blank" href="#">Available Course Policies</a></li>
                     </ul>
