--- a/ers/student/templates/process.html
+++ b/ers/student/templates/process.html
@@ -1,43 +1,189 @@
-{% load static %}
+{% extends 'navbar.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Elective Registration DA-IICT</title>
-        <link rel="icon" type="image/x-icon" href="..\static\images\daiict-logo-10.png">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    </head>
-    <body class="bg-light">
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-       
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-
-       
-
-        {% block content %}
-        {% endblock %}
-
-    </body>
-</html>
-
+{% block content %}
+<br></br>
+<br></br>
+<div class="container-lg rounded">
+    <div class="row mx-2">
+        <h3 class="text-center mb-4">Elective Registration System DA-IICT</h3>
+        
+    </div>
+</div>
+<div class="accordion px-md-4" id="accordionExample" >
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          Slot 1
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            <table class="table table-light table-hover">
+                <thead>
+                  <tr>
+                    <!-- <th scope="col">#</th> -->
+                    <th scope="col">Preferences</th>
+                    <th scope="col">Select The  Course</th>
+                    <!-- <th scope="col">Handle</th> -->
+                  </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                  <tr>
+                    <th scope="row">Preference 1</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 2</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 3</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+              
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Slot 2
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            <table class="table table-light table-hover">
+                <thead>
+                  <tr>
+                    <!-- <th scope="col">#</th> -->
+                    <th scope="col">Preferences</th>
+                    <th scope="col">Select The  Course</th>
+                    <!-- <th scope="col">Handle</th> -->
+                  </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                  <tr>
+                    <th scope="row">Preference 1</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 2</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 3</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+             
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+         Slot 3
+        </button>
+      </h2>
+      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+            <table class="table table-light table-hover">
+                <thead>
+                  <tr>
+                    <!-- <th scope="col">#</th> -->
+                    <th scope="col">Preferences</th>
+                    <th scope="col">Select The  Course</th>
+                    <!-- <th scope="col">Handle</th> -->
+                  </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                  <tr>
+                    <th scope="row">Preference 1</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 2</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                  <tr>
+                    <th scope="row">Preference 3</th>
+                    <td>
+                        <select class="course-dropdown" id="preference1">
+                            <option value="">Choose Option</option>
+                            <option value="course1">IT 214 DBMS</option>
+                            <option value="course2">SC 402 Introduction to Cryptography</option>
+                        </select>
+                    </td>
+                    
+                  </tr>
+                </tbody>
+              </table>
+            
+        </div>
+      </div>
+    </div> 
+  </div>
+</div>
+<div class="text-center mt-4">
+    <button type="submit" class="btn btn-primary">Submit Preferences</button>
+</div>
+{% endblock %}
