--- a/ers/student/templates/home.html
+++ b/ers/student/templates/home.html
@@ -1,15 +1,42 @@
 {% extends 'navbar.html' %}
+<!-- <link rel="stylesheet" type="text/css" href="..\styles.css"> -->
 
 {% block content %}
 <br></br>
 <br></br>
+
 <div class="container-lg rounded">
+  
     <div class="row mx-2">
+      <!-- <div class="bg-rec"></div> -->
         <h3 class="text-center mb-4">Elective Registration System DA-IICT</h3>
         <p>The Elective Registration System is designed to facilitate the selection and allotment of elective courses for students at DA-IICT. The system aims to streamline the process by allowing students to submit their course preferences and ensuring fair and efficient allotment based on predefined criteria.</p>
     </div>
 </div>
+<div class="bg-blur"></div>
+<!-- {% block styles %} -->
 
+<style>
+    .bg-rec{
+      width: 1496px;
+      height: 742px;
+      flex-shrink: 0;
+      background: linear-gradient(180deg, #84eaea 72.44%, #fdfdfd 100%);
+    }
+    .bg-blur {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 300px; /* Adjust size as needed */
+        height: 300px;
+        border-radius: 1062px;
+        background: #57d4e5;
+        filter: blur(150.64999389648438px);
+        z-index: -1; /* Ensure it stays behind other content */
+    }
+</style>
+
+<!-- {% endblock %} -->
 <!-- <script src="script.js"></script> -->
 
 {% endblock %}
