Image responsiveness added

--- a/ers/student/templates/home.html
+++ b/ers/student/templates/home.html
@@ -11,7 +11,7 @@
             <h3 class="text-center mb-4" style="font-size: 2rem; padding-right: 18.5rem;">Elective Registration System DA-IICT</h3>
             <p style="font-size: 1.25rem; padding-right: 1rem;">The Elective Registration System is designed to facilitate the selection and allotment of elective courses for students at DA-IICT. The system aims to streamline the process by allowing students to submit their course preferences and ensuring fair and efficient allotment based on predefined criteria.</p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center d-none d-md-block">
             <img src="{% static 'images/vector.svg' %}" alt="Vector Image" class="img-fluid">
         </div>
     </div>
