--- a/ers/student/templates/home.html
+++ b/ers/student/templates/home.html
@@ -21,7 +21,7 @@
     <div class="row mx-2">
         <h4 style="font-size: 1.5rem;">How to Use This Website</h4>
         <ol style="font-size: 1.25rem;">
-            <li>First, you need to <a href="{% url 'social:begin' 'google-oauth2' %}">login</a> using your DA-IICT credentials.</li>
+            <li>First, you need to login using your DA-IICT credentials.</li>
             <li>Once logged in, fill out the form displayed on the homepage with your details.</li>
             <li>Navigate to the 'Register' option.</li>
             <li>Under 'Register', go to each slot and provide your preferences. It is mandatory to give a preference for 'Preference 1', whether it is 'None' or the name of a course.</li>
