--- a/ers/student/templates/navbar.html
+++ b/ers/student/templates/navbar.html
@@ -36,7 +36,7 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item mb-1" href="#">Electives Offered</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item mb-1" href="{% url 'process' %}">Register</a></li>
+                      <li><a class="dropdown-item mb-1" href="{% url 'Process' %}">Register</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item mb-1" target="_blank" href="#">Available Course Policies</a></li>
                     </ul>
