db models created, preference form done

--- a/ers/student/templates/navbar.html
+++ b/ers/student/templates/navbar.html
@@ -36,9 +36,9 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item mb-1" href="#">Electives Offered</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item mb-1" href="{% url 'process' %}">Register</a></li>
+                      <li><a class="dropdown-item mb-1" href="{% url 'PreferenceProcess' %}">Register</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item mb-1" target="_blank" href="#">Available Course Policies</a></li>
+                      <li><a class="dropdown-item mb-1" href="#">Available Course Policies</a></li>
                     </ul>
                   </li>
                 </li>
