1. modification in database design 2. Change in student user login 3. Bug fixes and feature updates in Preference filling form 4. Setup for admin controls

--- a/ers/student/templates/message.html
+++ b/ers/student/templates/message.html
@@ -30,7 +30,7 @@
                 <div class="modal-footer">
                     <a href="{% url 'Home' %}" class="btn btn-warning">Return to Home</a>
                     {% if toLogin %}
-                    <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-primary">{{ toLogin }}</a>
+                    <a href="{% url 'Login' %}" class="btn btn-primary">{{ toLogin }}</a>
                     {% endif %}
                 </div>
             </div>
