--- a/ers/student/templates/navbar.html
+++ b/ers/student/templates/navbar.html
@@ -42,13 +42,18 @@
                     </ul>
                   </li>
                 </li>
+                {% if user.is_staff %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'AdminControls' %}">Admin Controls</a>
+                </li>
+                {% endif %}
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" style="color:blueviolet;" href="{% url 'Logout' %}">Logout</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                  <a class="nav-link" style="color:blueviolet;" href="{% url 'social:begin' 'google-oauth2' %}?next={% url 'FirstLogin' %}">Login</a>
+                  <a class="nav-link" style="color:blueviolet;" href="{% url 'Login' %}">Login</a>
                 </li>
                 {% endif %}
                 </ul>
